src/tests/snapshots/gitu__tests__discard__branch_selected.snap
---
source: src/tests/discard.rs
expression: ctx.redact_buffer()
---
 Branches                                                                       |
 * main                                                                         |
▌  unmerged                                                                     |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch -d merged                                                          |
Deleted branch merged (was b66a0bf).                                            |
styles_hash: 99db55147303043e
