src/tests/snapshots/gitu__tests__discard__discard_unstaged_line.snap
---
source: src/tests/discard.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   file-one                                                            |
▌@@ -1,2 +1 @@                                                                  |
▌ FOO                                                                           |
▌-BAR                                                                           |
                                                                                |
 Recent commits                                                                 |
 4f3ed19 main add file-one                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --reverse --recount                                                 |
styles_hash: 6795b03f13817018
