src/tests/snapshots/gitu__tests__discard__unmerged_branch_selected.snap
---
source: src/tests/discard.rs
expression: ctx.redact_buffer()
---
 Branches                                                                       |
 * main                                                                         |
▌  merged                                                                       |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch -d -f unmerged                                                     |
Deleted branch unmerged (was c84f226).                                          |
styles_hash: 538d5a2b41c4c7cb
